# macd_searcher

./: .env.example  .gitignore  FRONTEND_PLAN.md  NEXT_STEPS.md  PLAN.md  README.md  config.yaml  pyproject.toml
deploy/: macd-searcher-web.service
docs/: queries.sql  research.md  schema.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Charts.tsx  Headroom.tsx  HealthBanner.tsx  Outcomes.tsx  RunsTable.tsx  Scorecard.tsx  SignalsFeed.tsx  TopSymbols.tsx  ui.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: Dashboard.tsx  Outcomes.tsx  Scorecard.tsx
scripts/: debug_signals.py  discover_hip3.py  run_scan.cmd  smoke_hyperliquid.py  smoke_notify.py  smoke_signals.py
src/macd_searcher/: __main__.py  classify.py  config.py  db.py  hyperliquid.py  indicators.py  notify.py  signals.py  stats.py  update_outcomes.py
src/macd_searcher/web/: __init__.py  app.py  db.py  models.py  perf.py  queries.py
tests/: test_classify.py  test_db.py  test_indicators.py  test_notify.py  test_outcomes.py  test_signals.py  test_stats.py  test_web.py  test_web_perf.py
