[project]
name = "macd-searcher"
version = "0.1.0"
description = "Scan Hyperliquid perps on the 1D timeframe for MACD zero-line approaches and alert via Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# Dashboard API. Install only where you run the web UI: `uv sync --extra web`.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
macd-searcher = "macd_searcher.__main__:main"
macd-searcher-web = "macd_searcher.web.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macd_searcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
